@@ -1,5 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
+   * Use optimizer preferred index as --chunk-index for --where (issue 378).
+
 2010-07-01: version 1.2.16
 
    * Changed --no-use-index to --[no]use-index.
